- implememted feedback (goffy)
- replaced Xmf\Request::... by use Xmf\Request + Request::... (goffy)
- implemented image resizer (goffy)
- rebuild language defines for upload in forms (goffy)
- fixed bug with multiple upload formfields in one form (goffy)
- updated permissions to handle multiple permissions (goffy)
- added permissions class and permissions handler (goffy)
- cosmetics (goffy)

<h5>3.01 Alpha 2   [WORK IN PROGRESS - NOT RELEASED]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.2
<hr>
- code cosmetics (mamba)
- added "Build" icons to Modules and Tables tabs - time saver (mamba)
- cosmetics admin area (goffy)
- fixed problems with test data (goffy)
- fixed bug with upload file/images in admin pages (goffy)
- fixed bug with save permissions in admin pages (goffy)
- fixed bugs in tpl creation (goffy)
- improved tpl creation (goffy)
- added check for upload permission to form class (goffy)
- removed fb and disqus comments preferences (goffy)
- fixed bug in print.php (goffy)

*************************************************************
THIS IS LAST VERSION WHICH CREATES MODULES WITHOUT NAMESPACES
*************************************************************

<h5>3.01 Alpha 1   [2020-01-01]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.1
<hr>
- namespaces (mamba)
- class autoloading (mamba)
- added feedback page (mamba)
- PSR12 cosmetics (mamba)
- fixed sorting of fields (mamba)
- updated Scrutinizer config (mamba)
- added Config (mamba)
- moved icons to /images (mamba)

=================================================
2018/03/27: Version 1.91 alpha 3.6 [NOT RELEASED]
=================================================
- change from adminMenu to adminObject (mamba)
- buttons on left (mamba)
- replace static calls (mamba)
- fix statistics (mamba)
- implemented yoda in file creation (goffy)
- css corrections (goffy)
- yoda corrections (goffy)
- corrected css for templates admin tables/fields (goffy)