@@ -262,6 +262,10 @@ class AdminPages extends Files\CreateFile
                         $ret .= $axc->getAxcImageListSetVar($tableName, $fieldName, $t, $countUploader);
                         $countUploader++;
                         break;
+                    case 11:
+                        $ret .= $axc->getAxcUploadFileSetVar($moduleDirname, $tableName, $fieldName, false, $t, $countUploader, $fieldMain);
+                        $countUploader++;
+                        break;
                     case 12:
                         $ret .= $axc->getAxcUploadFileSetVar($moduleDirname, $tableName, $fieldName, true, $t, $countUploader, $fieldMain);
                         $countUploader++;
