@@ -1,39 +1,0 @@
-<?php
-
-namespace XoopsModules\Tdmcreate;
-
-/*
- * You may not change or alter any portion of this comment or credits
- * of supporting developers from this source code or any supporting source code
- * which is considered copyrighted (c) material of the original comment or credit authors.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
- */
-
- /**
- * Tdmcreate module for xoops
- *
- * @copyright      module for xoops
- * @license        GPL 2.0 or later
- * @package        tdmcreate
- * @since          1.0
- * @min_xoops      2.5.9
- * @author         Wedega - Email:<webmaster@wedega.com> - Website:<https://wedega.com>
- */
-
-//defined('XOOPS_ROOT_PATH') || die('Restricted access';
-
-/**
- * class Constants
- */
-class Constants
-{
-    /**#@+
-     * Constant definition
-     */
-	 
-	// define here all your module wide constants
-    
-}
