@@ -15,6 +15,7 @@
 - updated permissions to handle multiple permissions (goffy)
 - added permissions class and permissions handler (goffy)
 - cosmetics (goffy)
+- fixed bugs in getXoopsFormSelectFile and getClassGetTableSolenameById (goffy)
 
 <h5>3.01 Alpha 2   [WORK IN PROGRESS - NOT RELEASED]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.2
 <hr>
